--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ptech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/ankita070720/PTech",
+  "homepage": "https://ptechplacements.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,10 +16,11 @@
   "scripts": {
   "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
