--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ptech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ptechplacements.com",
+  "homepage": "https://ankita070720.github.io/ptech",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
