--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.5",
