--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ptech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ankita070720.github.io/ptech",
+  "homepage": "https://www.ptech.org.in/",
   "dependencies": {
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.0",
