--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^4.6.2",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
     "mongoose": "^8.5.2",
     "react": "^18.3.1",
@@ -23,7 +23,7 @@
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "swiper": "^11.1.5",
     "web-vitals": "^2.1.4"
   },
